fix: Convert integration tests from Mockito to stub implementations
Temporal SDK doesn't support Mockito proxies for activity implementations.
Converted all 5 integration tests to use proper stub activity classes:

- PopulateIntegrationTest: Added missing interface methods to stubs
- FinalizeIntegrationTest: Fixed method signatures for all activity stubs
- LottableMappingIntegrationTest: Full rewrite with stub implementations
- CrossDockIntegrationTest: Full rewrite with TestXDockAllocationActivity
- PutawayIntegrationTest: Full rewrite with TestInventoryHoldActivity

All tests now use TestWorkflowExtension and compile without errors.
Removed @Disabled annotations - tests will run in CI.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>